--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                         convallis at tellus.
                     </p>
                     <div class="copyright mb-4">
-                        Created By <span class="fw-bold">Graphberry</span> <br>
-                        © 2022 - <span class="name fw-bold">Bondi Inc</span>
+                        Created By <span class="fw-bold">Amina Moula</span> <br>
+                        © 2022 - All Rights Reserved <span class="name fw-bold">Bondi Inc</span>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2">
